# skylight-wallet

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.builder  README.md  analysis_options.yaml  l10n.yaml  pubkey.asc  pubspec.yaml
.github/workflows/: build-builder-image.yml  build-monero-c.yml  builder-image-build.yml  release.yml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
appimage/: .gitignore  AppImageBuilder.yml  build_appimage.sh  skylight_wallet.desktop
artifacts/: README.md
deb/: .gitignore  build_deb.sh
ios/: .gitignore
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: consts.dart  main.dart  notification_channels.dart  notifications_service.dart  periodic_tasks.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_pt.dart  app_pt.arb
lib/models/: contact_model.dart  fiat_rate_model.dart  language_model.dart  theme_model.dart  wallet_model.dart
lib/screens/: address_book.dart  coin_home.dart  keys.dart  (+27 more)
linux/: CMakeLists.txt  fix_execstack.sh
plugins/openalias_ffi/rust/: Cargo.toml  rust-toolchain.toml
plugins/openalias_ffi/rust/src/: error.rs  lib.rs
scripts/: build-moneroc-ci.sh  build-moneroc.sh  fdroid-build.sh  find_monthly_heights.sh  fix-linux-moneroc-execstack.sh  pin-tor-rust-toolchain.sh  reproducible.patch
test/: bitcoin_coin_selection_test.dart  bitcoin_fees_test.dart  erc20_abi_test.dart  ethereum_keys_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  installer.iss
(+92 files in other folders)
